Update input data